<resources>
    <string name="app_name">Sokrio Classic</string>
    <string name="target">Target</string>
    <string name="dashboard">Dashboard</string>
    <string name="target_navigation_item">Target</string>
    <string name="dashboard_navigation_item">Dashboard</string>
    <string name="title_activity_login">Sign in</string>
    <string name="language_setting">Change Language</string>
    <string name="language_setting_additional">Select language you want</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="completed">Completed</string>
    <string name="sales_target">TARGET</string>
    <string name="remaining">Remaining</string>
    <string name="title_activity_route">Route</string>
    <!-- Page Titles -->
    <string name="route">Route</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="title_activity_add_outlet">" "</string>
    <!-- Spinner title -->
    <string name="sp_thana_title">Thana</string>
    <string name="sp_outlet_type">Type</string>
    <string name="stock">Stock: </string>
    <string name="dashBoard_map">Map</string>
    <string name="dashboard_Dealer">Dealer</string>
    <string name="dashboard_delivery">Delivery</string>
    <string name="dashboard_inspection">Inspection</string>
    <string name="dashboard_productList">Product List</string>
    <string name="dashboard_promotionAds">Promotional Ads</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="search_outlet">Search Outlet</string>
    <string name="permission_denied_explanation">permission denied</string>
    <string name="settings">Setting</string>
    <string name="txtPromotionalAdsTitle">Promotional Ads</string>
    <string name="profile">Profile</string>
    <string name="updating_profile">Updating profile...</string>
    <string name="GoodMorning">Good Morning</string>
    <string name="GoodAfternoon">Good Afternoon</string>
    <string name="GoodEvening">Good Evening</string>
    <string name="GoodNight">Good Night</string>
    <string name="logout">Logout</string>
    <string name="upload_data">Upload Data</string>
    <string name="contact_us">Contact US</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="myPerformance">My Performance</string>
    <string name="search_dealer">Search Dealer</string>
    <string name="add_dealer">Add Dealer</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="credit">Credit</string>
    <string name="dealer_address">Dealer Address</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="dealer_type">Dealer Type:</string>
    <string name="district">District:</string>
    <string name="thana">Thana:</string>
    <string name="Please_select_a_thana">Please select a thana first</string>
    <string name="Dealer_location_is">Dealer location is not within your 100 meter radius.</string>
    <string name="connect">Connect to Wifi or Mobile Data</string>
    <string name="Could_not_found">Could not found any location yet. Please try again.</string>
    <string name="creating_Dealer">Creating Dealer......</string>
    <string name="Dealer_Information">Dealer Information</string>
    <string name="dealer_created_msg">Dealer created successfully</string>
    <string name="dealer_details">Dealer Details</string>
    <string name="target_details">Target Details</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="check_in">Check In</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="payment">Payment</string>
    <string name="total_paid">Total Paid:</string>
    <string name="total_due">Total Due:</string>
    <string name="Purchase_History">Purchase History-</string>
    <string name="order">Order</string>
    <string name="order_id">Order ID:</string>
    <string name="order_id_t">Order ID: %s</string>
    <string name="paid">Paid</string>
    <string name="discount">Discount:</string>
    <string name="due">Due:</string>
    <string name="product_name">Product Name:</string>
    <string name="quantity">Quantity: </string>
    <string name="rate">Rate:</string>
    <string name="price">Prc: </string>
    <string name="order_no">Order No:</string>
    <string name="pay">Pay</string>
    <string name="sub_total">Sub Total:</string>
    <string name="grand_total">Grand Total:</string>
    <string name="pay_now">Pay Now</string>
    <string name="search_product">Search Product</string>
    <string name="total">Total:</string>
    <string name="transport">Transport</string>
    <string name="select_category">Select Category</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_payment">Invoice Type</string>
    <string name="select_payment_cash">Cash</string>
    <string name="select_payment_credit">Credit</string>
    <string name="select_payment_advance">Advance</string>

    <string name="stockDialogue">Stock:</string>
    <string name="total_price">Total Price:</string>
    <string name="select">Select</string>
    <string name="change_password">Change Password</string>
    <string name="comment">Comment:</string>
    <string name="creatingOrder">Creating order....</string>
    <string name="deliveryList">Delivery List</string>
    <string name="loadingDeliveryList">Loading delivery list.....</string>
    <string name="type">Type :</string>
    <string name="is_damaged">Is Damaged :</string>
    <string name="condition">Condition :</string>
    <string name="qty">Qty.</string>
    <string name="submit_inspection">Submit Inspection</string>
    <string name="product_list">Product List</string>
    <string name="contactAdmin">Please contact to your admin.</string>
    <string name="passwordRequire">Password is required!</string>
    <string name="emailRequired">Email is required!</string>
    <string name="bank_name">Bank Name</string>
    <string name="cheque_no">Cheque No</string>

    <string name="deposit_slip">Deposit Slip</string>
    <string name="cheque_date">Cheque Date</string>
    <string name="performance">Performance</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="target_plan">Target Plan</string>

    <string name="outlet">Outlet</string>
    <string name="deliver">Deliver</string>
    <string name="inspection">Inspection</string>
    <string name="sales_return">SalesReturn</string>
    <string name="orders">Orders</string>
    <string name="payments">Payment</string>
    <string name="purchase_history">Purchase History-</string>
    <string name="offer">Offer:</string>
    <string name="order_date">Order Date</string>
    <string name="order_date_t">Order Date: %s</string>
    <string name="promotional_discount">Promotional Discount</string>
    <string name="outlet_information">Outlet Information</string>
    <string name="outlet_details">Outlet Details</string>
    <string name="address">Address</string>
    <string name="outlet_type">Outlet Type</string>
    <string name="sells_return_list">Sells Return List</string>
    <string name="toatal">Total:</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="selesReturn">Sales Return</string>
    <string name="reason">Reason:</string>
    <string name="sku_no">SKU No:</string>
    <string name="refresh_data">Refresh Data</string>


    <string-array name="paymentType">
        <item>Cash</item>
        <item>Cheque</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="my_lang">
        <item>Eng</item>
        <item>বাংলা</item>
    </string-array>

    <string-array name="salesReturnReason">
        <item>Damage</item>
        <item>Expired</item>
        <item>Short Money</item>
        <item>Replace</item>
    </string-array>

    <string-array name="returnCause">
        <item>Select cause of return</item>
        <item>Damaged product</item>
        <item>Change of product (For example, returning 1 Litre coke bottle for ordering 2.25 liter coke bottle)</item>
        <item>Cancellation of order while delivery</item>
        <item>Incorrect Product or Size Ordered</item>
        <item>Product No Longer Needed</item>
        <item>Product Did Not Match Description on Catalog</item>
        <item>Late Delivery of Items</item>
        <item>Wrong item ordered</item>
        <item>Faulty product</item>
    </string-array>
    <string-array name="promotion_type">
        <item>Select Promotion Type</item>
        <item>Banner</item>
        <item>Outlet Visit</item>
        <item>Check Memo</item>
        <item>Drive focus SKU</item>
    </string-array>
    <string-array name="is_damaged">
        <item>Is damaged?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="visibility">
        <item>Select Visibility</item>
        <item>Visible</item>
        <item>Not Visible</item>
    </string-array>
    <string-array name="condition">
        <item>Select Condition</item>
        <item>Good</item>
        <item>Bad</item>
        <item>Moderate</item>
    </string-array>
    <!-- Language select dialog -->
    <string-array name="lang_select">
        <item>English</item>
        <item>Bangla</item>
    </string-array>


    <string name="geofence_unknown_error" translatable="false">
    Unknown error: the Geofence service is not available now.
  </string>
    <string name="geofence_not_available" translatable="false">
    Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.
  </string>
    <string name="geofence_too_many_geofences" translatable="false">
    Your app has registered too many geofences.
  </string>
    <string name="geofence_too_many_pending_intents" translatable="false">
    You have provided too many PendingIntents to the addGeofences() call.
  </string>
</resources>
