<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_update_data"
            android:checkable="false"
            android:icon="@drawable/refresh"
            android:title="@string/update_data" />

        <item
            android:id="@+id/nav_contact"
            android:checkable="false"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contact_us" />

    </group>
    <group android:id="@+id/gp_nav_information">
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />
    </group>
</menu>
