<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.humaclab.lalteer.activity.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:tabIndicatorColor="@color/white"
        app:tabMode="fixed"
        android:fontFamily="@font/latobold"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="#b3ffffff">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target"
            android:fontFamily="@font/latobold"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latobold"
            android:text="@string/dashboard"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_performance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latobold"
            android:text="@string/performance"/>
    </com.google.android.material.tabs.TabLayout>

    <RelativeLayout
        android:id="@+id/content_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sliding_tabs"/>

</RelativeLayout>
