<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="purchasedProduct"
            type="com.humaclab.lalteer.model.purchase_history.OrderDetailsItem" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/product_name"
                    android:fontFamily="@font/latobold"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Product Name"
                    android:padding="10dp"
                    android:text='@{purchasedProduct.productName}'
                    android:fontFamily="@font/latobold"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/quantity"
                    android:fontFamily="@font/latobold"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Quantity"
                    android:fontFamily="@font/latoregular"
                    android:padding="10dp"
                    android:text='@{String.valueOf(purchasedProduct.productQty)}'
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/rate"
                    android:fontFamily="@font/latobold"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_product_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Rate"
                    android:fontFamily="@font/latoregular"
                    android:padding="10dp"
                    android:text='@{purchasedProduct.productRate}'
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/discount"
                    android:fontFamily="@font/latobold"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_product_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Discount"
                    android:fontFamily="@font/latoregular"
                    android:padding="10dp"
                    android:text='@{purchasedProduct.productDiscount}'
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/price"
                    android:fontFamily="@font/latobold"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Price"
                    android:fontFamily="@font/latobold"
                    android:padding="10dp"
                    android:text='@{purchasedProduct.productPrice}'
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>