<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.humaclab.lalteer.activity.EditOutletActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_outlet"
                        android:layout_width="104dp"
                        android:layout_height="104dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/addimage"
                        app:civ_border_color="#000"
                        app:civ_border_width="1dp" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_if_outlet_name"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_outlet_name"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/latoregular"
                        android:hint="@string/dealer_name"
                        android:inputType="text"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_if_name"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_outlet_owner_name"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:fontFamily="@font/latoregular"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:hint="@string/owner_name"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_if_phone"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_marginLeft="10dp"
                        android:id="@+id/et_outlet_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/latoregular"
                        android:hint="@string/contact_number"
                        android:inputType="phone"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_action_taka"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_marginLeft="10dp"
                        android:id="@+id/et_creditLimit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/latoregular"
                        android:hint="@string/credit"
                        android:inputType="phone"/>
                </LinearLayout>
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_if_phone"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_marginLeft="10dp"
                        android:id="@+id/et_outlet_ref_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/latoregular"
                        android:hint="Refference Number"
                        android:inputType="phone"/>
                </LinearLayout>-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_address"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_outlet_address"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latoregular"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/dealer_address"
                        android:inputType="text"/>

                    <Button
                        android:id="@+id/btn_get_location"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/outlet_marker"
                        android:visibility="invisible" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_outlet_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".70"
                        android:fontFamily="@font/latobold"
                        android:background="@drawable/border"
                        android:padding="4dp"
                        android:text="@string/dealer_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sp_outlet_type"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_district"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".70"
                        android:background="@drawable/border"
                        android:padding="4dp"
                        android:text="@string/district"
                        android:fontFamily="@font/latobold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/sp_district"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_thana"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".70"
                        android:background="@drawable/border"
                        android:padding="4dp"
                        android:text="@string/thana"
                        android:fontFamily="@font/latobold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sp_thana"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btn_cancel"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:fontFamily="@font/latobold"
                        android:text="@string/cancel"
                        android:drawableRight="@drawable/ic_if_circle_cross"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_update_outlet"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:fontFamily="@font/latobold"
                        android:text="@string/update"
                        android:drawableRight="@drawable/ic_if_circle_check"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
